# traceur-de-rayons

./: CMakeLists.txt  README.md  WishList  main.cpp
Environment/: Environment.cpp  Environment.h  Object.cpp  Object.h
Environment/Objects/: Cube.cpp  Cube.h  Object.cpp  Object.h
Output/: Camera.cpp  Camera.h  OutputManager.cpp  OutputManager.h
Ray/: Ray.cpp  Ray.h  Tessel.cpp  Tessel.h
Utils/: Vector3.cpp  Vector3.h
